finished swagger server
