# booking_system/swagger_server/models/__init__.py
@@ -3,8 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.booking_confirmation import BookingConfirmation
-from swagger_server.models.booking_rejection import BookingRejection
-from swagger_server.models.booking_request import BookingRequest
 from swagger_server.models.room import Room
 from swagger_server.models.room_features import RoomFeatures
